--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
       "url": "https://github.com/mars/create-react-app-buildpack.git"
     }
   ],
-  "success_url": "/",
+  "success_url": "/adim",
   "env": {
     "REACT_APP_MOLTIN_CLIENT_ID": {
       "description":
